# semantic-cache

./: DECISIONS.md  README.md  app.py  pyproject.toml  requirements.txt
src/semcache/: __init__.py  cache.py  cli.py  config.py  decorator.py  embed.py  models.py  normalizer.py  telemetry.py
src/semcache/index/: __init__.py  base.py  memory.py  redis.py
tests/: conftest.py  test_cache_core.py  test_cli.py  test_config_normalizer.py  test_decorator_telemetry.py  test_index.py  test_redis.py  test_ttl_eviction.py
