[project]
name = "semcache"
version = "0.1.0"
description = "Semantic cache for LLM calls — returns stored responses for semantically-equivalent prompts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "loguru>=0.7",
    "pyyaml>=6",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.6"]
demo = ["gradio>=4", "pandas>=2", "sentence-transformers>=3"]
embeddings = ["sentence-transformers>=3"]
redis = ["redis>=5"]

[project.scripts]
semcache = "semcache.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semcache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/semcache"]
# Redis backend requires a running server; covered by skippable integration tests.
omit = ["src/semcache/index/redis.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
